# livraria-curso-django

./: .gitignore  Procfile  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_auto_20210921_1330.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py  0007_alter_itenscompra_livro.py  0008_alter_itenscompra_livro.py
core/views/: __init__.py  autor.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  editora.py  livro.py  testesIniciais.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
static/: staticfiles.json
